# PyLHC

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitmodules  .travis.yml  .zenodo.json  CHANGELOG.md  MANIFEST.in  README  README.md  environment.pickle  genindex.html  index.doctree  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/constants/: index.doctree
.doctrees/data_extract/: index.doctree
.doctrees/htc/: index.doctree
.doctrees/root/: index.doctree
.github/workflows/: README.md  coverage.yml  cron.yml  documentation.yml  publish.yml  tests.yml
_modules/: index.html
_modules/pylhc/: autosix.html  forced_da_analysis.html  irnl_rdt_correction.html  job_submitter.html  kickgroups.html  lsa_to_madx.html  machine_settings_info.html
_modules/pylhc/calibration/: beta.html  dispersion.html
_modules/pylhc/constants/: general.html
_modules/pylhc/data_extract/: lsa.html  timber.html
_modules/pylhc/htc/: mask.html  utils.html
_modules/pylhc/sixdesk_tools/: create_workspace.html  post_process_da.html  submit.html  troubleshooting.html  utils.html
_modules/pylhc/utils/: tfs_tools.html
_sources/: index.rst.txt
_sources/entrypoints/: analysis.rst.txt  machine_settings_info.rst.txt
_sources/modules/: calibration.rst.txt  constants.rst.txt  sixdesk_tools.rst.txt
_sources/root/: index.rst.txt
_static/css/: custom.css
cern/: __init__.py  sdds.py  tfs.py  timber.py  tsv.py  tsvObj.py
cern/data/: __init__.py  hdf5.py  sdds.py  tfs.py  tsv.py  yasp.py
cern/rdm/: __init__.py  h5obj.py  namedtuple.py  optics.py  picker.py  pydataobj.py  rdmdate.py  utils.py
cern/rdm/data/: __init__.py  tfs.py  yasp.py
constants/: index.doctree  index.html
data_extract/: index.doctree  index.html
doc/: Makefile  conf.py  index.rst
doc/cern/: index.rst
doc/constants/: index.rst
doc/data_extract/: index.rst
doc/entrypoints/: analysis.rst  bpm_calibration.rst  bsrt_analysis.rst  forced_da_analysis.rst  irnl_rdt_correction.rst  job_submitter.rst  kickgroups.rst  lsa_to_madx.rst  machine_info.rst  submitter.rst
doc/htc/: index.rst
doc/madx/: index.rst
doc/modules/: calibration.rst  constants.rst  data_extract.rst  htc.rst  sixdesk_tools.rst  utils.rst
doc/root/: index.rst
doc/sixdesk_tools/: index.rst
doc/tools/: index.rst
doc/utils/: index.rst
entrypoints/: analysis.doctree  analysis.html  bpm_calibration.doctree  bpm_calibration.html  bsrt_analysis.doctree  bsrt_analysis.html  forced_da_analysis.doctree  forced_da_analysis.html  irnl_rdt_correction.doctree  irnl_rdt_correction.html  job_submitter.doctree  job_submitter.html  kickgroups.doctree  kickgroups.html  lsa_to_madx.doctree  lsa_to_madx.html  machine_info.doctree  machine_info.html  machine_settings_info.doctree  machine_settings_info.html  submitter.doctree  submitter.html
htc/: index.doctree  index.html
modules/: calibration.doctree  calibration.html  constants.doctree  constants.html  data_extract.doctree  data_extract.html  htc.doctree  htc.html  sixdesk_tools.doctree  sixdesk_tools.html  utils.doctree  utils.html
pylhc/: BPM_calibration.py  BSRT_analysis.py  BSRT_logger.py  __init__.py  autosix.py  bpm_calibration.py  bsrt_analysis.py  bsrt_logger.py  diff_files.py  forced_da_analysis.py  forced_da_analysis_likemike.py  irnl_rdt_correction.py  job_submitter.py  kickgroups.py  logging_config.yml  lsa_to_madx.py  machine_settings_info.py  madx_submitter.py  omc3_context.py  plot_amplitude_detuning.py  plot_bbq.py  plot_layout.py  plot_spectrum.py  plot_tfs.py  print_machine_settings_overview.py  python_logimage.v2.py
pylhc/ballistic_calibration/: calibration.py
pylhc/bpm_calibration/: beta.py  calibration.py  dispersion.py
pylhc/calibration/: beta.py  dispersion.py
pylhc/constants/: autosix.py  calibration.py  external_paths.py  forced_da_analysis.py  general.py  kickgroups.py  machine_settings_info.py  plot_tfs.py
pylhc/data_extract/: lsa.py  pylsa.py  timber.py
pylhc/htc/: mask.py  utils.py
pylhc/htcondor_submitter/: submitter.py
pylhc/madx/: mask.py
pylhc/plot_scripts/: constants.py  plot_layout.py  plot_optics.py  plot_resonance_lines.py
pylhc/plotshop/: annotations.py  colors.py  lines.py  post_processing.py  style.py
pylhc/sixdesk_tools/: create_workspace.py  db_extract.py  mask_sixdeskenv  mask_sysenv  post_process_da.py  submit.py  troubleshooting.py  utils.py
pylhc/utils/: dict_tools.py  diff_tools.py  logging_tools.py  tfs_tools.py  time_tools.py
root/: index.doctree  index.html
testing/: test.tfs  test_rdm.py
tests/accuracy/: context.py
tests/input/: getbetax.out
tests/inputs/calibration/measurements/: beta_phase_y.tfs  getampbetax.out  getampbetay.out
tests/inputs/calibration/output/: calibration_beta_x.tfs  calibration_beta_y.tfs  calibration_dispersion_x.tfs  calibration_x.out  calibration_y.tfs
tests/inputs/kicks_horizontal_md2162/: MD2162_ACD_TimberDB_Fill6196.db  getkickac.out
tests/inputs/kicks_horizontal_md2162/MD2162_ACD_TimberDB_Fill6196/: 151.idx  151.len  153.idx  153.len  154.rec  155.idx  155.len  155.rec  156.rec  157.idx  157.len  157.rec  158.rec  159.idx  159.rec  160.rec  161.idx  161.rec  162.idx  162.rec  163.idx  163.rec
tests/inputs/kicks_vertical_md3312/: emittance_bws_y.tfs  emittance_y.tfs  intensity.tfs  kick_x.tfs  kick_y.tfs
tests/inputs/lsa_to_madx/: LHCBEAM_MD_ATS_2022_05_04_B1_RigidWaitsShift_IP1pos_knob.madx  MD_ATS_2022_05_04_B1_RigidWaitsShift_IP1pos.tfs  knobs_definitions.txt  parsed_definitions.json
tests/inputs/model_lhc_thin_30cm/: job.lhc.b1.madx_commands.madx  job.lhc.b2.madx_commands.madx  job.lhc.b4.madx_commands.madx
tests/inputs/sixdesk_da_results/: da.tfs  da_per_angle.tfs
tests/unit/: test_autosix.py  test_ballistic_calibration.py  test_bpm_calibration.py  test_bsrt_analysis.py  test_forced_da_analysis.py  test_irnl_rdt_correction.py  test_job_submitter.py  test_lsa_to_madx.py  test_tfs_tools.py  test_time_tools.py
(+10 files in other folders)
